# tbs

./: .gitignore  .ignore  Cargo.toml  README.md  bacon.toml  test.csv
src/: lib.rs  main.rs  rtn.rs  sta.rs
src/rtn/: mod.rs  removals.rs  returns.rs
src/sta/: entry.rs  mod.rs  plan.rs
tests/data/: CustomerReturn.csv  CustomerReturns.csv  RemovalShipment.csv  StaPlan.csv
