[package]
name = "tbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1.6"
serde_json = "1.0.85"
anyhow = "1.0.66"
thiserror = "1.0.37"
pickledb = "0.5.1"
chrono = "0.4.23"

[dependencies.uuid]
version = "1.2.2"
features = [
  "v7",                
  "fast-rng",
]